--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "make-custom-tex-extension": "cd src/_scripts/reveal-plugins/tex-components && ../../../../node_modules/mathjax-full/components/bin/pack && mkdir -p ../../../../dist/lib/mathjax/tex-components && cp tex_fragments.min.js ../../../../dist/lib/mathjax/tex-components/tex_fragments.min.js",
+    "make-custom-tex-extension": "cd lib/reveal-plugins/tex-components && ../../../node_modules/mathjax-full/components/bin/pack && mkdir -p ../../../dist/lib/mathjax/tex-components && cp tex_fragments.min.js ../../../dist/lib/mathjax/tex-components/tex_fragments.min.js",
     "live-fa-css": "NODE_ENV=dev-server FONT_AWESOME='css' webpack-dev-server --mode development",
     "live-fa-svg": "NODE_ENV=dev-server FONT_AWESOME='svg' webpack-dev-server --mode development",
     "dev-fa-css": "NODE_ENV=development FONT_AWESOME='css' webpack --mode development",
@@ -29,48 +29,50 @@
   },
   "homepage": "https://github.com/gcalmettes/reveal.js-webpack-kit#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-jsx-control-statements": "^4.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "file-loader": "^4.3.0",
-    "google-fonts-plugin": "^5.0.2",
-    "highlight-loader": "^0.7.4",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.17",
-    "jsx-control-statements": "^3.2.8",
-    "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.1",
+    "@babel/plugin-transform-runtime": "^7.11.1",
+    "@babel/preset-env": "^7.11.1",
+    "@babel/preset-react": "^7.11.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-jsx-control-statements": "",
+    "babel-plugin-transform-class-properties": "",
+    "babel-plugin-transform-decorators-legacy": "",
+    "copy-webpack-plugin": "6.2.1",
+    "css-loader": "",
+    "file-loader": "",
+    "google-fonts-plugin": "",
+    "highlight-loader": "",
+    "html-webpack-plugin": "",
+    "html-webpack-tags-plugin": "",
+    "jsx-control-statements": "",
+    "mini-css-extract-plugin": "",
+    "node-sass": "",
+    "optimize-css-assets-webpack-plugin": "",
+    "sass-loader": "",
+    "style-loader": "",
+    "terser-webpack-plugin": "^4.1.0",
+    "uglifyjs-webpack-plugin": "",
+    "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": ""
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/fontawesome-free": "",
+    "@fortawesome/fontawesome-svg-core": "",
+    "@fortawesome/free-brands-svg-icons": "",
+    "@fortawesome/free-regular-svg-icons": "",
+    "@fortawesome/free-solid-svg-icons": "",
     "highlight.js": "^9.17.1",
-    "html-loader": "^1.3.2",
-    "javascript-natural-sort": "^0.7.1",
-    "markdown-loader": "^6.0.0",
-    "mathjax-full": "^3.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "html-loader": "",
+    "javascript-natural-sort": "",
+    "markdown-loader": "",
+    "marked": "",
+    "mathjax-full": "",
+    "mathjax-react": "^1.0.6",
+    "react": "",
+    "react-dom": "",
     "reveal.js": "^3.7.0",
     "reveal.js-menu": "^1.2.0",
     "reveal_external": "^1.3.0",
