--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
   "plugins": [
     "@babel/transform-runtime",
     "transform-class-properties",
     "@babel/plugin-proposal-object-rest-spread",
-    "jsx-control-statements"
+    "jsx-control-statements",
   ]
 }
