--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@babel/plugin-transform-runtime": "^7.11.1",
     "@babel/preset-env": "^7.11.1",
     "@babel/preset-react": "^7.11.1",
+    "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.1.0",
     "babel-plugin-jsx-control-statements": "",
+    "babel-plugin-recharts": "^1.2.1",
     "babel-plugin-transform-class-properties": "",
     "babel-plugin-transform-decorators-legacy": "",
     "copy-webpack-plugin": "6.2.1",
@@ -73,6 +75,7 @@
     "mathjax-react": "^1.0.6",
     "react": "",
     "react-dom": "",
+    "recharts": "^2.0.3",
     "reveal.js": "^3.7.0",
     "reveal.js-menu": "^1.2.0",
     "reveal_external": "^1.3.0",
