--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@fortawesome/free-brands-svg-icons": "",
     "@fortawesome/free-regular-svg-icons": "",
     "@fortawesome/free-solid-svg-icons": "",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "highlight.js": "^9.17.1",
     "html-loader": "",
     "javascript-natural-sort": "",
@@ -74,6 +75,7 @@
     "mathjax-full": "",
     "mathjax-react": "^1.0.6",
     "react": "",
+    "react-annotation": "^2.2.1",
     "react-dom": "",
     "recharts": "^2.0.3",
     "reveal.js": "^3.7.0",
