--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@fortawesome/free-solid-svg-icons": "",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "csv-loader": "^3.0.3",
+    "graphviz-react": "^1.1.1",
     "highlight.js": "^9.17.1",
     "html-loader": "",
     "javascript-natural-sort": "",
