--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-annotation": "^2.2.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "",
+    "react-player": "^2.9.0",
     "recharts": "^2.0.3",
     "reveal_external": "^1.3.0",
     "reveal.js": "^3.7.0",
